--- a/model_training/MLP_spec.nbconvert.ipynb
+++ b/model_training/MLP_spec.nbconvert.ipynb
@@ -38,21 +38,54 @@
    "outputs": [],
    "source": [
     "class SpectroMLP(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Defines a multilayer perceptron (MLP) for classification of spectrogram-based data.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - input_size (int): The number of features in the input data.\n",
+    "    - num_classes (int): The number of classes for classification.\n",
+    "\n",
+    "    The network consists of two hidden layers and an output layer.\n",
+    "    \"\"\"\n",
     "    def __init__(self, input_size, num_classes=4):\n",
     "        super(SpectroMLP, self).__init__()\n",
-    "        # Two hidden layers with a moderate number of neurons\n",
+    "        # Initialize the parent class, nn.Module.\n",
+    "        \n",
+    "        # Define the first hidden layer. This layer takes the input and transforms it to a 512-dimensional space.\n",
     "        self.fc1 = nn.Linear(input_size, 512)  # First hidden layer\n",
+    "        \n",
+    "        # Define the second hidden layer. This layer further transforms the representation to a 256-dimensional space.\n",
     "        self.fc2 = nn.Linear(512, 256)         # Second hidden layer\n",
-    "        self.fc3 = nn.Linear(256, num_classes) # Output layer\n",
+    "        \n",
+    "        # Define the output layer. This layer maps the features from the second hidden layer to the class scores.\n",
+    "        self.fc3 = nn.Linear(256, num_classes) # Output layer, which will output 'num_classes' scores.\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # Flatten the input tensor if not already flattened\n",
+    "        \"\"\"\n",
+    "        Defines the forward pass of the network.\n",
+    "\n",
+    "        Parameters:\n",
+    "        - x (Tensor): The input data tensor.\n",
+    "\n",
+    "        Returns:\n",
+    "        - x (Tensor): The output tensor containing class scores for each input sample.\n",
+    "        \"\"\"\n",
+    "        # Flatten the input tensor if not already flattened. This is necessary because\n",
+    "        # nn.Linear expects its input to be of shape (batch_size, num_features).\n",
     "        x = x.view(x.size(0), -1)\n",
-    "        # Forward pass through the network\n",
-    "        x = F.relu(self.fc1(x))  # Activation function for the first hidden layer\n",
-    "        x = F.relu(self.fc2(x))  # Activation function for the second hidden layer\n",
-    "        x = self.fc3(x)          # No activation function for output layer\n",
-    "        return x"
+    "        \n",
+    "        # Pass the input through the first hidden layer and apply the ReLU activation function.\n",
+    "        x = F.relu(self.fc1(x))  # Activation function for the first layer\n",
+    "        \n",
+    "        # Pass the output of the first layer through the second hidden layer and apply the ReLU activation function.\n",
+    "        x = F.relu(self.fc2(x))  # Activation function for the second layer\n",
+    "        \n",
+    "        # Pass the output of the second layer through the output layer. Note that no activation function\n",
+    "        # is applied here, which is common for classification tasks where the raw scores are used\n",
+    "        # with a softmax function during the loss computation.\n",
+    "        x = self.fc3(x)          # No activation function applied at the output layer\n",
+    "\n",
+    "        return x\n"
    ]
   },
   {
@@ -25928,49 +25961,55 @@
     }
    ],
    "source": [
+    "# Check if CUDA is available on the device and set the CUDA device accordingly\n",
     "if torch.cuda.is_available():\n",
-    "    torch.cuda.set_device(cuda_device)\n",
+    "    torch.cuda.set_device(cuda_device)  # Assuming 'cuda_device' is defined in 'modules.constants'\n",
     "elif torch.backends.mps.is_available():\n",
-    "    mps_device = torch.device(\"mps\")\n",
+    "    mps_device = torch.device(\"mps\")  # Set device to use Metal Performance Shaders on macOS\n",
     "\n",
+    "# Define data transformations, which include converting images or tensors to PyTorch tensors\n",
     "data_transforms = {\n",
     "    'train': transforms.Compose([\n",
-    "        transforms.ToTensor(),\n",
+    "        transforms.ToTensor(),  # Transform the data to a tensor, normalizing the values\n",
     "    ]),\n",
     "    'val': transforms.Compose([\n",
     "        transforms.ToTensor(),\n",
     "    ]),\n",
     "}\n",
     "\n",
-    "# Setup datasets and loaders\n",
+    "# Setup datasets for training and validation using the custom SpectroDataset class\n",
     "dsets = {\n",
     "    'train': SpectroDataset(train_dir, train_behav_file, data_transforms['train']),\n",
     "    'val': SpectroDataset(val_dir, val_behav_file, data_transforms['val'])\n",
     "}\n",
-    "dset_sizes = {split: len(dsets[split]) for split in ['train', 'val']}\n",
+    "dset_sizes = {split: len(dsets[split]) for split in ['train', 'val']}  # Calculate the size of each dataset\n",
     "\n",
+    "# Create data loaders that handle sampling and provide batches of data to the model during training\n",
     "dset_loaders = {}\n",
     "for split in ['train', 'val']:\n",
+    "    # Calculate class weights for handling imbalanced data\n",
     "    targets = np.array([dsets[split].get_label(i) for i in range(len(dsets[split]))])\n",
     "    class_counts = dsets[split].get_class_counts()\n",
     "    class_weights = np.array([1.0 / class_counts[label] if class_counts[label] > 0 else 0 for label in targets])\n",
     "    sampler = WeightedRandomSampler(class_weights, num_samples=len(class_weights), replacement=True)\n",
     "    dset_loaders[split] = torch.utils.data.DataLoader(dsets[split], batch_size=b_size, num_workers=0, sampler=sampler)\n",
-    "    print('done making loader:', split)\n",
+    "    print('done making loader:', split)  # Print a message once loaders are ready\n",
     "\n",
-    "# Initialize model, criterion, and optimizer\n",
-    "model_ft = SpectroMLP(input_size=108360, num_classes=4)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer_ft = optim.Adam(model_ft.parameters(), lr=0.0001, weight_decay=1e-5)\n",
+    "# Initialize the neural network model, the loss function, and the optimizer\n",
+    "model_ft = SpectroMLP(input_size=108360, num_classes=4)  # 108360 should match the flattened input size of your data\n",
+    "criterion = nn.CrossEntropyLoss()  # Standard loss function for classification tasks\n",
+    "optimizer_ft = optim.Adam(model_ft.parameters(), lr=0.0001, weight_decay=1e-5)  # Adam optimizer with specified learning rate and weight decay\n",
     "\n",
-    "# Device configuration with MPS support\n",
+    "# Configure the device on which the model will run\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "model_ft.to(device)\n",
-    "criterion.to(device)\n",
-    "print(f\"Training on {device}\")\n",
+    "model_ft.to(device)  # Move the model to the configured device\n",
+    "criterion.to(device)  # Move the criterion to the configured device\n",
+    "print(f\"Training on {device}\")  # Inform the user of the device being used\n",
     "\n",
-    "# Train model\n",
-    "model_ft, accuracies, losses, preds, labels = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler, dset_loaders, dset_sizes, num_epochs=n_epochs)"
+    "# Train the model using a custom training function that needs to be defined elsewhere in your codebase\n",
+    "model_ft, accuracies, losses, preds, labels = train_model(\n",
+    "    model_ft, criterion, optimizer_ft, exp_lr_scheduler, dset_loaders, dset_sizes, num_epochs=n_epochs\n",
+    ")\n"
    ]
   },
   {
@@ -26017,18 +26056,32 @@
     }
    ],
    "source": [
-    "# Output results\n",
+    "# Loop through each dataset split type, typically 'train' and 'val' for training and validation phases.\n",
     "for split in ['train', 'val']:\n",
+    "    # Print out the accuracy for each epoch during training and validation.\n",
+    "    # 'accuracies' is a dictionary where keys are the split types and values are lists of accuracy values per epoch.\n",
     "    print(split, 'accuracies by epoch:', accuracies[split])\n",
+    "    \n",
+    "    # Similarly, print out the loss for each epoch during training and validation.\n",
+    "    # 'losses' is similarly structured with lists of loss values per epoch.\n",
     "    print(split, 'losses by epoch:', losses[split])\n",
     "\n",
+    "# Process accuracy data to convert it from PyTorch tensors to NumPy arrays for compatibility or further processing.\n",
     "for key, value in accuracies.items():\n",
-    "    new_value = [v.cpu().numpy() for v in value]\n",
-    "    accuracies[key] = new_value\n",
+    "    # Convert each tensor in the accuracy list to a NumPy array and move it from GPU to CPU if necessary.\n",
+    "    new_value = [v.cpu().numpy() for v in value]  # 'v.cpu()' moves the tensor to CPU, '.numpy()' converts it to a NumPy array.\n",
+    "    accuracies[key] = new_value  # Update the dictionary with the converted values.\n",
     "\n",
+    "# Save the trained model's state dictionary. This is the set of model parameters (weights and biases) learned during training.\n",
     "torch.save(model_ft.state_dict(), '../../models/MLP_spec_best_model.pt')\n",
     "\n",
+    "# Plot the training history using the updated accuracy and loss data.\n",
+    "# This function likely generates graphs showing how accuracy and loss changed over the course of training.\n",
     "plot_training_history(accuracies, losses, 'MLP_spec')\n",
+    "\n",
+    "# Plot a confusion matrix using the true labels and predicted labels from the model.\n",
+    "# This visualization helps to understand how well the model is performing across different classes,\n",
+    "# showing where it makes correct predictions and where it confuses one class for another.\n",
     "plot_confusion_matrix(labels, preds, 'MLP_spec')"
    ]
   }
