final before submission

--- a/processing_data/preprocess_data.ipynb
+++ b/processing_data/preprocess_data.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.insert(0, '../')\n",
+    "\n",
     "from modules.constants import *"
    ]
   },
@@ -74,6 +78,8 @@
     "            pre_path = os.path.join(train_dir, pre_path)  # Save to training directory for first 16 subjects.\n",
     "        else:\n",
     "            pre_path = os.path.join(val_dir, pre_path)  # Save to validation directory for others.\n",
+    "        \n",
+    "        print(f'saved {pre_path}')\n",
     "        raw.save(pre_path, overwrite=True)  # Save the file, allowing overwriting if the file already exists.\n"
    ]
   },
